# mumble-sip

./: .dockerignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.pocket-tts  README.md  config.toml.example
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml
docker/: Dockerfile  Dockerfile.pocket-tts  config.toml.docker-example  docker-compose.yml
migrations/: 20260317000000_initial.sql  20260317000001_add_caller_channels.sql
pjsip-sys/: Cargo.toml  build.rs  wrapper.h
pjsip-sys/src/: lib.rs
sounds/: intro.txt
src/: config.rs  db.rs  main.rs  session.rs
src/audio/: bridge.rs  mod.rs  sounds.rs  tts.rs
src/mumble/: control.rs  voice.rs
src/sip/: callbacks.rs  media_port.rs  mod.rs
src/sms/: mod.rs
