[workspace]
members = [".", "pjsip-sys"]
resolver = "3"

[package]
name = "mumble-sip"
version = "0.1.0"
edition = "2024"

[dependencies]
mumble-protocol-2x = "0.6.0"
pjsip-sys = { path = "pjsip-sys" }
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
tokio-util = { version = "0.7", features = ["codec"] }
openssl = "0.10"
opus = "0.3.1"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
futures = "0.3"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hound = "3.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
names = "0.14"
async-trait = "0.1"

[profile.dev]
debug = 2
split-debuginfo = "off"
strip = "none"
